--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@nestjs/platform-express": "^7.5.1",
     "apollo-server-express": "^2.19.0",
     "arangojs": "^7.2.0",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "graphql": "^15.4.0",
     "graphql-scalars": "^1.6.1",
     "graphql-tools": "^7.0.2",
+    "helmet": "^4.2.0",
     "js-yaml": "^3.14.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -42,6 +44,7 @@
     "@nestjs/config": "^0.6.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/js-yaml": "^3.12.5",
