Refactoring to add configuration via factory function to graphql and database module

--- a/config.test.yaml
+++ b/config.test.yaml
@@ -10,3 +10,10 @@ db:
     username: 'app_nest_test'
     password: 'secret'
     certs: []
+
+graphql:
+  introspection: true
+  playground: true
+  subscriptions: false
+  autoSchemaFile: true
+  sortSchema: true
