--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@apollo/federation": "^0.20.7",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/cqrs": "^7.0.1",
     "@nestjs/graphql": "^7.9.1",
     "@nestjs/platform-express": "^7.5.1",
     "apollo-server-express": "^2.19.0",
